# calico_engine

./: .gitignore  PLAN_engine_suggestion.md  claude.md  cli.py  docs.md  pyproject.toml
.claude/: settings.local.json
game_records/: game_20251229_231402_score40.json  game_20251229_231415_score44.json  game_20251230_100754_score50.json
mcts_boards/: board_20251229_224636_rank1_score55.json  board_20251229_224636_rank2_score54.json
scripts/: pull_images.py  pull_more_images.py
source/: analyze_sweep.py  benchmark.py  board_configurations.py  button.py  cat.py  cli.py  cli_app.py  game_metadata.py  game_mode.py  game_record.py  game_state.py  goal.py  heuristic.py  hex_grid.py  market.py  mcts_agent.py  migrate_game_records.py  play_mode.py  play_mode_visualizer.py  player.py  replay_visualizer.py  run_game.py  run_mcts.py  run_replay.py  simulation_mode.py  sweep.py  sweep_weights.py  tile.py  tile_bag.py  tile_tracker.py
tests/: test_buttons.py  test_cat_scoring_rules.py  test_cats.py  test_combined_actions.py  test_edge_cases.py  test_engine_suggestion.py  test_game_metadata.py  test_game_modes.py  test_game_record.py  test_goal_selection.py  test_goals.py  test_heuristic.py  test_hex_grid.py  test_mcts.py  test_scoring_verbose.py  test_tile.py  test_tile_bag.py
