[project]
name = "calico"
version = "0.1.0"
description = "Monte Carlo Tree Search agent for the Calico board game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "hexy>=1.4.0",
    "typer>=0.9.0",
    "mlflow>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
calico = "source.cli_app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["source"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
